--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
-Flask==2.2.3
-Flask-Cors==3.1.1
-Pillow==9.4.0
-numpy==1.24.2
-scikit-learn==1.2.2
-cloudinary==1.30.1
-python-dotenv==1.0.0
+blinker==1.9.0
+certifi==2024.8.30
+click==8.1.7
+cloudinary==1.41.0
+colorama==0.4.6
+Flask==3.1.0
+Flask-Cors==5.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+joblib==1.4.2
+MarkupSafe==3.0.2
+numpy==2.2.0
+pillow==11.0.0
+scikit-learn==1.6.0
+scipy==1.14.1
+six==1.17.0
+threadpoolctl==3.5.0
+urllib3==2.2.3
+Werkzeug==3.1.3
